app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap');

:root {
    --color-sage: #9CAF88;
    --color-sage-dark: #7e936f;
    --color-cream: #FAFAF7;
    --color-wood: #5C4033;

    --font-heading: 'Playfair Display', serif;
    --font-body: 'Helvetica', sans-serif;

    --max-width: 1200px;
    --gutter: 20px;
}

/*Global reset*/
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: var(--font-body);
    background-color: var(--color-sage-dark);
    color: var(--color-wood);
}

.page-wrapper {
    max-width: var(--max-width);
    margin: 0 auto;
    background-color: white;
    min-height: 100vh;
    padding-bottom: 60px;
}

/*Links*/
a {
    text-decoration: none;
    color: inherit;
}

.navbar {
    background-color: var(--color-sage);
    padding: 15px 20px;
    position: sticky;
    top: 0;
    z-index: 100;
    margin-bottom: 20px;
}

.navbar-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
}

.menu {
    position: absolute;
    top: 60px;
    right: 20px;
    width: 220px;
    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
}

.logo {
    font-family: var(--font-heading);
    font-size: 2.2rem;
    color: var(--color-cream);
    text-shadow: 1px 1px 4px rgba(0,0,0,0.8);
}

.logo-home {
    font-size: 2.8rem;
    letter-spacing: 1px;
}

.hamburger {
    font-size: 28px;
    cursor: pointer;
}

/*Dropdown menu*/
.menu {
    display: none;
    flex-direction: column;
    background-color: var(--color-cream);
    padding: 10px 20px;
    border-radius: 4px;
    margin-top: 5px;
}

.menu.active {
    display: flex;
}

.menu a{
    padding: 10px 0;
    font-weight: bold;
    color: var(--color-wood);
}

/*Hero section*/
.hero-container {
    width: 100%;
    display: flex;
    justify-content: center;
    padding: 0 60px;
}

.hero {
    width: 100%;
    max-width: var(--max-width);
    height: 400px;
    margin: 20px 0;
    background-image: url('/images/norwich2.jpg');
    background-size: cover;
    background-position: center;
    border-radius: 8px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.hero-text {
    color: var(--color-cream);
    text-shadow: 1px 1px 4px rgba(0,0,0,0.5);
    
}

.hero-text h2 {
    font-family: 'Playfair Display', serif;
    font-size: 2rem;
    margin-top: 200px;
}

/*About section*/
.message {
    text-align: center;
    padding: 60px 20px;
    color: var(--color-wood);
}

.message h2 {
    font-family: var(--font-heading);
    font-size: 2.8rem;
    margin-bottom: 20px;
}

.message p {
    max-width: 700px;
    margin: 0 auto;
    font-size: 1.1rem;
    line-height: 1.6;
}

/*Divider with lines*/
.divider {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 30px 0;
}

.divider::before,
.divider::after {
    content: '';
    flex: 1;
    height: 1px;
    background: var(--color-wood);
    margin: 0 10px;
}

.divider span {
    font-family: var(--font-heading);
    font-size: 30px;
    font-weight: bold;
}

.message p {
    max-width: 700px;
    margin: 0 auto;
    font-size: 18px;
    padding-bottom: 40px;
}

.info-grid-container {
    display: flex;
    justify-content: center;
    width: 100%;
    padding: 40px 20px;
}

.info-grid {
    display: flex;
    width: 100%;
    max-width: var(--max-width);
    height: 300px;
}

.info-grid .left-image,
.info-grid .center-text,
.info-grid .right-image {
    flex: 1;
}

.info-grid .left-image,
.info-grid .right-image {
    background-size: cover;
    background-position: center;
}


/*Left image*/
.info-grid .left-image {
    background-image: url('/images/glass.jpg');
}

.info-grid .right-image {
    background-image: url('/images/instruments.jpg');
}

/*Center text block*/
.info-grid .center-text {
    flex: 1;
    background-color: var(--color-wood);
    padding: 30px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-family: var(--font-body);
    color: var(--color-cream);
    line-height: 1.6;
}

.center-text {
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
}

/*Scripture section */

.scripture-section {
    padding: 40px 20px 60px;
    display: flex;
    justify-content: center;
    background-color: transparent;
}

.scripture-box {
    width: 100%;
    max-width: 700px;
    min-height: 200px;
    background-color: white;
    padding: 50px 40px;
    border-radius: 12px;
    text-align: center;
    box-shadow: 0 6px 18px rgba(0,0,0,0.8);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin: 0 auto;
}

.scripture-box:hover {
    transform: translate(-2px);
    transition: 0.2s ease;
}

/*Quote text*/

.scripture-text {
    font-size: 1.5rem;
    color: var(--color-wood);
    margin-bottom: 18px;
    line-height: 1.8;
}

/*Reference */

.scripture-reference {
    font-weight: bold;
    font-size: 1rem;
    opacity: 0.7;
    color: var(--color-wood);
}

@media (max-width: 768px) {
    .info-grid {
        flex-direction: column;
        height: auto;
    }

    .info-grid .left-image,
    .info-grid .right-image {
        height: 200px;
    }
}

.prayer-form {
    display: flex;
    flex-direction: column;
    gap: 15px;
    max-width: 600px;
    margin: 30px auto;
}

.prayer-form-h1 {
    text-align: center;
    margin-top: 30px;
}

.prayer-form input,
.prayer-form textarea {
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 6px;
    font-family: var(--font-body);
}

.prayer-form textarea {
    min-height: 120px;
    resize: vertical;
}

.prayer-form button {
    padding: 12px;
    background-color: var(--color-sage);
    color: white;
    border: none;
    border-radius: 6px;
    cursor: pointer;
}

.prayer-form button:hover {
    background-color: var(--color-sage-dark);
}

.public-prayer-section {
    margin-top: 40px;
    text-align: center;
}

.public-prayer-card {
    background-color: white;
    border: 1px solid var(--color-wood);
    border-radius: 8px;
    padding: 15px;
    margin-bottom: 15px;
    max-width: 600px;
    margin-left: auto;
    margin-right: auto;
    text-align: left;
}

/*Sermons page*/

.page-content {
    padding: 40px 20px;
}

.page-title {
    text-align: center;
    font-family: var(--font-heading);
    margin-bottom: 40px;
}

/*Grid layout*/

.sermon-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 30px;
}

/*individual sermons*/

.sermon-card {
    background-color: white;
    padding: 15px;
    border-radius: 8px;
    text-align: center;
}

/*video*/

.sermon-card iframe {
    width: 100%;
    height: 200px;
    border: none;
    border-radius: 6px;
}


/*About Page*/

.about-hero {
    width: 100%;
    display: flex;
    justify-content: center;
    margin-bottom: 40px;
}

.about-hero img {
    max-width: 900px;
    width: 100%;
    height: auto;
    border-radius: 8px;
}

/*Text Section*/

.about-section {
    max-width: 800px;
    margin: 40px auto;
    text-align: center;
}

.about-section h2 {
    font-family: var(--font-heading);
    margin-bottom: 20px;
}

.about-section p {
    margin-bottom: 20px;
    line-height: 1.6;
}

/*About pastor section*/

.about-pastor-section {
    display: flex;
    align-items: center;
    gap: 40px;
    max-width: 1000px;
    margin: 60px auto;
    padding: 0 20px;
    background-color: white;
    border-radius: 8px;
}

.pastor-text h2 {
    margin-bottom: 15px;
}

.pastor-text {
    flex: 1;
    line-height: 1.6;
}

/*pastor photo*/

.about-pastor-hero {
    flex: 1;
    display: flex;
    justify-content: center;
}

.about-pastor-hero img {
    width: 100%;
    max-width: 300px;
    height: auto;
    border-radius: 8px;
}

/*Gallery*/

.photo-gallery {
    margin-top: 60px;
    text-align: center;
}

.gallery-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 20px;
    margin-top: 20px;
}

.gallery-grid img {
    width: 100%;
    border-radius: 6px;
}

@media (max-width: 768px) {

    .about-pastor-section {
        flex-direction: column;
        text-align: center;
    }
}

/*Offerings page*/

.offering-container {
    max-width: 600px;
    margin: 40px auto;
    text-align: center;
}

.give-button {
    display: inline-block;
    background-color: var(--color-sage);
    color: white;
    padding: 15px 30px;
    margin-top: 20px;
    font-size: 18px;
    font-weight: bold;
    border-radius: 8px;
    text-decoration: none;
}

.give-button:hover {
    background-color: var(--color-sage-dark);
}

/*Disabled State*/

.give-button.disabled {
    background-color: gray;
    cursor: not-allowed;
}

/*Contact page */

.contact-container {
    display: flex;
    gap: 40px;
    max-width: 1000px;
    margin: 40px auto;
    padding: 0 20px;
}

/*Left side info */

.contact-info {
    flex: 1;
}

.contact-info p {
    margin-bottom: 15px;
    line-height: 1.6;
}

/*Right side map */

.contact-map {
    flex: 1;
}

.contact-map iframe {
    border-radius: 8px;
}

@media (max-width: 768px) {

    .contact-container {
        flex-direction: column;
    }
}

